se configura ebextension
Former-commit-id: 8007ac4d6294964a5d6f1af46deb1b09bbff86a0

--- a/.ebextensions/01-deploy.config
+++ b/.ebextensions/01-deploy.config
@@ -5,6 +5,8 @@ container_commands:
   #02-config-cache:
   #  command: "php artisan config:cache"
   #  cwd: "/var/app/ondeck"
+  "4-install-supervisor":
+      command: "chmod +x .ebextensions/supervisord/installer/run.sh && .ebextensions/supervisord/installer/run.sh"
 
 files:
   "/opt/elasticbeanstalk/hooks/appdeploy/post/99_make_storage_writable.sh":
