--- a/public/.htaccess
+++ b/public/.htaccess
@@ -5,8 +5,9 @@
 
     RewriteEngine On
     #Force to https in aws..
-    #RewriteCond %{HTTP:X-Forwarded-Proto} =http
-    #RewriteRule .* https://%{HTTP:Host}%{REQUEST_URI} [L,R=permanent]
+
+    RewriteCond %{HTTP:X-Forwarded-Proto} =http
+    RewriteRule .* https://%{HTTP:Host}%{REQUEST_URI} [L,R=permanent]
 
     # Handle Authorization Header
     RewriteCond %{HTTP:Authorization} .
@@ -39,3 +40,4 @@
         #Header set Cache-Control "max-age=2628000, public"
     </filesMatch>
 </IfModule>
+
