se avanza con el modulo de cambio de status, asi como el de insercion
Former-commit-id: 0d5817461f944f8719fd109c4c608a616ffd1edf [formerly baa5874d13d97add922e95d55787465f9fa57444]
Former-commit-id: 114bd208969cbe92b304226bed65c378b627a18e

--- a/.ebextensions/01-deploy.config
+++ b/.ebextensions/01-deploy.config
@@ -27,6 +27,7 @@ files:
       mkdir -p /var/app/current/storage/app/public/Request/Fcl
       mkdir -p /var/app/current/storage/app/public/Request/Lcl
       mkdir -p /var/app/current/storage/app/public/Request/GC
+      mkdir -p /var/app/current/storage/app/public/Request/GC-LCL
       mkdir -p /var/app/current/public/pdf
       chmod -R 777 /var/app/current/storage/
       chmod -R 777 /var/app/current/public/imgcarrier/
