--- a/.ebextensions/01-deploy.config
+++ b/.ebextensions/01-deploy.config
@@ -21,9 +21,11 @@ files:
       mkdir -p /var/app/current/storage/app/public/Account/Fcl
       mkdir -p /var/app/current/storage/app/public/Account/Lcl
       mkdir -p /var/app/current/storage/app/public/Account/GC
+      mkdir -p /var/app/current/storage/app/public/Account/GC-LCL
       mkdir -p /var/app/current/storage/app/public/Import/Fcl
       mkdir -p /var/app/current/storage/app/public/Import/Lcl
       mkdir -p /var/app/current/storage/app/public/Import/GC
+      mkdir -p /var/app/current/storage/app/public/Import/GC-LCL
       mkdir -p /var/app/current/storage/app/public/Request/Fcl
       mkdir -p /var/app/current/storage/app/public/Request/Lcl
       mkdir -p /var/app/current/storage/app/public/Request/GC
