--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
       "barryvdh/laravel-dompdf": "^0.8.2",
       "barryvdh/laravel-elfinder": "^0.3.12",
       "doctrine/dbal": "^2.9",
+      "fabpot/goutte": "^3.2",
       "fideloper/proxy": "^4.0",
       "guzzlehttp/guzzle": "^6.3",
       "hashids/hashids": "^3.0",
@@ -32,6 +33,7 @@
       "spatie/laravel-backup": "^5.10",
       "spatie/laravel-googletagmanager": "^2.5",
       "spatie/laravel-permission": "^2.14",
+      "symfony/dom-crawler": "^4.3",
       "unisharp/laravel-filemanager": "v2.0.0-alpha7",
       "yajra/laravel-datatables-oracle": "^8.7"
    },
