--- a/composer.json
+++ b/composer.json
@@ -1,89 +1,93 @@
 {
-   "name": "laravel/laravel",
-   "description": "The Laravel Framework.",
-   "keywords": ["framework", "laravel"],
-   "license": "MIT",
-   "type": "project",
-   "require": {
-      "php": "^7.1.3",
-      "alexpechkarev/google-maps": "1.0.9",
-      "api2pdf/api2pdf.php": "dev-master",
-      "aws/aws-sdk-php": "~3.0",
-      "barryvdh/laravel-dompdf": "^0.8.2",
-      "barryvdh/laravel-elfinder": "^0.3.12",
-      "doctrine/dbal": "^2.9",
-      "fideloper/proxy": "^4.0",
-      "guzzlehttp/guzzle": "^6.3",
-      "hashids/hashids": "^3.0",
-      "intercom/intercom-php": "^4.0",
-      "lab404/laravel-impersonate": "^1.2",
-      "laracasts/flash": "^3.0",
-      "laravel/framework": "5.6.*",
-      "laravel/passport": "^7.0",
-      "laravel/tinker": "^1.0",
-      "laravelcollective/html": "^5.5",
-      "league/flysystem-aws-s3-v3": "^1.0",
-      "maatwebsite/excel": "~2.1.0",
-      "orangehill/iseed": "dev-master",
-      "owen-it/laravel-auditing": "^8.0",
-      "php-http/guzzle6-adapter": "^2.0",
-      "predis/predis": "^1.1",
-      "pusher/pusher-php-server": "^3.1",
-      "spatie/laravel-backup": "^5.10",
-      "spatie/laravel-googletagmanager": "^2.5",
-      "spatie/laravel-permission": "^2.14",
-      "unisharp/laravel-filemanager": "v2.0.0-alpha7",
-      "yajra/laravel-datatables-oracle": "^8.7"
-   },
-   "require-dev": {
-      "barryvdh/laravel-debugbar": "^3.2",
-      "filp/whoops": "^2.0",
-      "fzaninotto/faker": "^1.4",
-      "laravel/browser-kit-testing": "^4.0",
-      "laravel/dusk": "^4.0",
-      "mockery/mockery": "^1.0",
-      "nunomaduro/collision": "^2.0",
-      "phpunit/phpunit": "^7.0"
-   },
-   "autoload": {
-       "classmap": [
-           "database/seeds",
-           "database/factories"
-       ],
-       "psr-4": {
-           "App\\": "app/"
-       },
-       "files": ["app/Function.php"]
-   },
-   "autoload-dev": {
-       "psr-4": {
-           "Tests\\": "tests/"
-       }
-   },
-   "extra": {
-       "laravel": {
-           "dont-discover": [
-               "laravel/dusk"
-           ]
-       }
-   },
-   "scripts": {
-       "post-root-package-install": [
-           "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
-       ],
-       "post-create-project-cmd": [
-           "@php artisan key:generate"
-       ],
-       "post-autoload-dump": [
-           "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
-           "@php artisan package:discover"
-       ]
-   },
-   "config": {
-       "preferred-install": "dist",
-       "sort-packages": true,
-       "optimize-autoloader": true
-   },
-   "minimum-stability": "dev",
-   "prefer-stable": true
+  "name": "laravel/laravel",
+  "description": "The Laravel Framework.",
+  "keywords": ["framework", "laravel"],
+  "license": "MIT",
+  "type": "project",
+  "require": {
+    "php": "^7.1.3",
+    "alexpechkarev/google-maps": "1.0.9",
+    "api2pdf/api2pdf.php": "dev-master",
+    "aws/aws-sdk-php": "~3.0",
+    "barryvdh/laravel-dompdf": "^0.8.2",
+    "barryvdh/laravel-elfinder": "^0.3.12",
+    "doctrine/dbal": "^2.9",
+    "fideloper/proxy": "^4.0",
+    "greggilbert/recaptcha": "^2.2",
+    "guzzlehttp/guzzle": "^6.3",
+    "hashids/hashids": "^3.0",
+    "intercom/intercom-php": "^4.0",
+    "lab404/laravel-impersonate": "^1.2",
+    "laracasts/flash": "^3.0",
+    "laravel/framework": "5.6.*",
+    "laravel/passport": "^7.0",
+    "laravel/tinker": "^1.0",
+    "laravelcollective/html": "^5.5",
+    "league/flysystem-aws-s3-v3": "^1.0",
+    "maatwebsite/excel": "~2.1.0",
+    "orangehill/iseed": "^2.6.1",
+    "owen-it/laravel-auditing": "^8.0",
+    "php-http/guzzle6-adapter": "^2.0",
+    "predis/predis": "^1.1",
+    "pusher/pusher-php-server": "^3.1",
+    "spatie/laravel-backup": "^5.10",
+    "spatie/laravel-googletagmanager": "^2.5",
+    "spatie/laravel-permission": "^2.14",
+    "unisharp/laravel-filemanager": "v2.0.0-alpha7",
+    "yajra/laravel-datatables-oracle": "^8.7"
+  },
+  "require-dev": {
+    "barryvdh/laravel-debugbar": "^3.2",
+    "filp/whoops": "^2.0",
+    "fzaninotto/faker": "^1.4",
+    "laravel/browser-kit-testing": "^4.0",
+    "laravel/dusk": "^4.0",
+    "mockery/mockery": "^1.0",
+    "nunomaduro/collision": "^2.0",
+    "phpunit/phpunit": "^7.0"
+  },
+  "autoload": {
+    "classmap": [
+      "database/seeds",
+      "database/factories"
+    ],
+    "psr-4": {
+      "App\\": "app/"
+    },
+    "files": ["app/Function.php"]
+  },
+  "autoload-dev": {
+    "psr-4": {
+      "Tests\\": "tests/"
+    }
+  },
+  "extra": {
+    "laravel": {
+      "dont-discover": [
+        "laravel/dusk"
+      ]
+    }
+  },
+  "scripts": {
+    "post-root-package-install": [
+      "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
+    ],
+    "post-create-project-cmd": [
+      "@php artisan key:generate"
+    ],
+    "post-autoload-dump": [
+      "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
+      "@php artisan package:discover"
+    ]
+  },
+  "config": {
+    "preferred-install": "dist",
+    "sort-packages": true,
+    "optimize-autoloader": true,
+    "platform": {
+      "php": "7.1.3"
+    }
+  },
+  "minimum-stability": "dev",
+  "prefer-stable": true
 }
