--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
         "barryvdh/laravel-elfinder": "^0.3.12",
         "doctrine/dbal": "^2.9",
         "fideloper/proxy": "^4.0",
-        "greggilbert/recaptcha": "dev-master",
+        "greggilbert/recaptcha": "^2.2",
         "guzzlehttp/guzzle": "^6.3",
         "hashids/hashids": "^3.0",
         "intercom/intercom-php": "^4.0",
