--- a/public/.htaccess
+++ b/public/.htaccess
@@ -4,6 +4,9 @@
     </IfModule>
 
     RewriteEngine On
+    #Force to https in aws..
+    RewriteCond %{HTTP:X-Forwarded-Proto} =http
+    RewriteRule .* https://%{HTTP:Host}%{REQUEST_URI} [L,R=permanent]
 
     # Handle Authorization Header
     RewriteCond %{HTTP:Authorization} .
@@ -18,4 +21,21 @@
     RewriteCond %{REQUEST_FILENAME} !-d
     RewriteCond %{REQUEST_FILENAME} !-f
     RewriteRule ^ index.php [L]
+
+    # Allow access from all domains for webfonts.
+    # subdomains like "subdomain.example.com".
+    <IfModule mod_headers.c>
+       <FilesMatch "\.(ttf|ttc|otf|eot|woff|woff2|font.css|css)$">
+         Header set Access-Control-Allow-Origin "*"
+       </FilesMatch>
+    </IfModule>
+
+    # One year for image files
+    <filesMatch ".(jpg|jpeg|png|gif|ico|ttf|ttc|otf|eot|woff|woff2|font.css)$">
+        #Header set Cache-Control "max-age=31536000, public"
+    </filesMatch>
+    # One month for css and js
+    <filesMatch ".(css|js)$">
+        #Header set Cache-Control "max-age=2628000, public"
+    </filesMatch>
 </IfModule>
