--- a/composer.json
+++ b/composer.json
@@ -28,6 +28,7 @@
         "orangehill/iseed": "^2.6.1",
         "owen-it/laravel-auditing": "^8.0",
         "php-http/guzzle6-adapter": "^2.0",
+        "phpoffice/phpspreadsheet": "^1.10",
         "predis/predis": "^1.1",
         "pusher/pusher-php-server": "^3.1",
         "spatie/laravel-backup": "^5.10",
