--- a/.env.save
+++ b/.env.save
@@ -4,20 +4,21 @@ APP_ENV=local
 APP_KEY=base64:keuTGhSyrcadjJ2Sczbs8x01iXDQCgOOAWXvC2oXJcw=
 APP_DEBUG=true
 APP_URL=http://localhost
+APP_VIEW=local
 
 LOG_CHANNEL=stack
+
+LOGGING_CHANNELS=single
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=cargofive
 DB_USERNAME=root
+DB_DATABASE=cargofive
 DB_PASSWORD=123
 
-DB_HOST1=cfive-production-2.cgdktx9ninlh.eu-central-1.rds.amazonaws.com
-DB_DATABASE1=ebdb
-DB_USERNAME1=cargofive
-DB_PASSWORD1=C4rg05.2018#*
+RELO="de"
 
 BROADCAST_DRIVER=pusher
 CACHE_DRIVER=file
@@ -29,22 +30,31 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=cargofive2018
 REDIS_PORT=6379
 
-AWS_ACCESS_KEY_ID=AKIAINM44J5ZFIBBUG4Q
-AWS_BUCKET=cargofive-backups
+AWS_ACCESS_KEY_ID=
+AWS_BUCKET=files-cargofive-development
 AWS_DEFAULT_REGION=eu-central-1
-AWS_SECRET_ACCESS_KEY=rpcxaxsPs8M230627Ya+GQY+byv+XF3uH+F6+v4i
-AWS_UPLOAD=cargofive-uploads
+AWS_SECRET_ACCESS_KEY=
+AWS_UPLOAD=files-cargofive-development
 
+2MAIL_DRIVER=smtp
+2MAIL_HOST=smtp.mailtrap.io
+2MAIL_PORT=2525
+2MAIL_USERNAME=
+2MAIL_PASSWORD=
+2MAIL_ENCRYPTION=null
+
+MAILGUN_DOMAIN=cargofive.com
+MAILGUN_SECRET=
 MAIL_DRIVER=smtp
-MAIL_HOST=smtp.mailtrap.io
-MAIL_PORT=2525
-MAIL_USERNAME=a399a4a50b8ac5
-MAIL_PASSWORD=fccbc00ba5ecf4
-MAIL_ENCRYPTION=null
+MAIL_ENCRYPTION=tls
+MAIL_HOST=smtp.mailgun.org
+MAIL_PASSWORD=
+MAIL_USERNAME=
+
 
 PUSHER_APP_ID=624544
-PUSHER_APP_KEY=b74324bf3d783ed40021
-PUSHER_APP_SECRET=ea36c93f8fb9a50f1837
+PUSHER_APP_KEY=
+PUSHER_APP_SECRET=
 PUSHER_APP_CLUSTER=us2
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
