--- a/public/.htaccess
+++ b/public/.htaccess
@@ -4,8 +4,8 @@
     </IfModule>
     RewriteEngine On
     #Force to https in aws..
-    RewriteCond %{HTTP:X-Forwarded-Proto} =http
-    RewriteRule .* https://%{HTTP:Host}%{REQUEST_URI} [L,R=permanent]
+    #RewriteCond %{HTTP:X-Forwarded-Proto} =http
+    #RewriteRule .* https://%{HTTP:Host}%{REQUEST_URI} [L,R=permanent]
     # Handle Authorization Header
     RewriteCond %{HTTP:Authorization} .
     RewriteRule .* - [E=HTTP_AUTHORIZATION:%{HTTP:Authorization}]
