Libreria para genera uuid aleatio y sustituir el de crisp
Former-commit-id: 2f5f45d80ce1e543c0520e8f6bc5ee0a62698c34

--- a/composer.json
+++ b/composer.json
@@ -38,6 +38,7 @@
         "spatie/laravel-medialibrary": "^7.0.0",
         "spatie/laravel-permission": "^2.14",
         "unisharp/laravel-filemanager": "v2.0.0-alpha7",
+        "webpatser/laravel-uuid": "^3.0",
         "yajra/laravel-datatables-oracle": "^8.7"
     },
     "require-dev": {
