--- a/package.json
+++ b/package.json
@@ -11,15 +11,17 @@
   },
   "devDependencies": {
     "axios": "^0.18.1",
-    "bootstrap": "^4.0.0",
+    "bootstrap": "^4.4.1",
     "cross-env": "^5.2.0",
     "jquery": "^3.2",
     "laravel-mix": "^2.0",
     "lodash": "^4.17.4",
     "popper.js": "^1.12",
-    "vue": "^2.5.7"
+    "vue": "^2.6.11",
+    "vue-template-compiler": "^2.6.11"
   },
   "dependencies": {
+    "bootstrap-vue": "^2.9.0",
     "laravel-echo": "^1.4.0",
     "pusher-js": "^4.2.2",
     "vue-nav-tabs": "^0.5.7"
