--- a/public/.htaccess
+++ b/public/.htaccess
@@ -6,8 +6,8 @@
    RewriteEngine On
    
    #Force to https in aws..
-   #RewriteCond %{HTTP:X-Forwarded-Proto} =http
-   #RewriteRule .* https://%{HTTP:Host}%{REQUEST_URI} [L,R=permanent]
+   RewriteCond %{HTTP:X-Forwarded-Proto} =http
+   RewriteRule .* https://%{HTTP:Host}%{REQUEST_URI} [L,R=permanent]
    
    # Handle Authorization Header
    RewriteCond %{HTTP:Authorization} .
