Trying to implement vuejs
Former-commit-id: a406e658dd698ab561d39cc1f0b871fd6deb8faf [formerly 21ed4237f0d69eb673348f321960a37c389c0fe1]
Former-commit-id: 02ec0df79e4e862d714b89af850b84a8ef35f6a0

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "bootstrap-vue": "^2.9.0",
     "laravel-echo": "^1.4.0",
     "pusher-js": "^4.2.2",
-    "vue-nav-tabs": "^0.5.7"
+    "vue-nav-tabs": "^0.5.7",
+    "vue-router": "^3.1.6"
   }
 }
