--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "bootstrap-vue": "^2.9.0",
     "laravel-echo": "^1.4.0",
     "pusher-js": "^4.2.2",
-    "vue-nav-tabs": "^0.5.7"
+    "vue-multiselect": "^2.1.6",
+    "vue-nav-tabs": "^0.5.7",
+    "vue2-daterange-picker": "^0.4.6"
   }
 }
