--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,5 +1,6 @@
 {
-    "/js/contracts/app.js": "/js/contracts/app.js",
+    "/js/contracts/edit.js": "/js/contracts/edit.js",
+    "/js/contracts/index.js": "/js/contracts/index.js",
     "/js/app.js": "/js/app.js",
     "/css/app.css": "/css/app.css"
 }
