--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "pusher-js": "^4.2.2",
     "vue-multiselect": "^2.1.6",
     "vue-nav-tabs": "^0.5.7",
+    "vue-router": "^3.1.6",
     "vue2-daterange-picker": "^0.4.6",
     "vue2-dropzone": "^3.6.0"
   }
