Transit Times Finished
Former-commit-id: 7bafa9e064eccbf2d69aa274c6468c10ed3a6254 [formerly a1b0df8ad1d865dfe3151ea67f6047f9e507f630]
Former-commit-id: 0bd3a94415c366763bf5adbd2ac70c0d068319c0

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -4,5 +4,6 @@
     "/js/inlands/edit.js": "/js/inlands/edit.js",
     "/js/contracts/index.js": "/js/contracts/index.js",
     "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/css/app.css": "/css/app.css",
+    "/js/transit_time/index.js": "/js/transit_time/index.js"
 }
