--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -2,8 +2,8 @@
     "/js/contracts/edit.js": "/js/contracts/edit.js",
     "/js/inlands/index.js": "/js/inlands/index.js",
     "/js/inlands/edit.js": "/js/inlands/edit.js",
+    "/js/transit_time/index.js": "/js/transit_time/index.js",
     "/js/contracts/index.js": "/js/contracts/index.js",
     "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css",
-    "/js/transit_time/index.js": "/js/transit_time/index.js"
+    "/css/app.css": "/css/app.css"
 }
